fixed background on mobile

--- a/MyStyle.css
+++ b/MyStyle.css
@@ -4,6 +4,9 @@
     font-style: normal;
 }
 
+header{
+    padding-left: 10px;
+}
 .sidenav {
     font-family: 'Bebas Neue', sans-serif;
     height: 100%;
@@ -227,7 +230,7 @@ input {
     width: 700vw;
 }
 
-#resumeContainer {
+#contentContainer {
     margin: auto;
     width: 98vw;
     height: 85vh;
@@ -240,7 +243,7 @@ input {
     *{
         background-color: #F8F4F9;
     }
-    #resumeContainer {
+    #contentContainer {
         display: none;
     }
 
